force-app/main/default/objects/NEO_Criteria__c/NEO_Criteria__c.object-meta.xml
<CustomObject>
    <description>For rule engine</description>
    <label>NEO Criteria</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>NEO Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>