force-app/main/default/objects/NEO_Criteria__c/fields/NEO_Resource_Operator__c.field-meta.xml
<CustomField>
    <fullName>NEO_Resource_Operator__c</fullName>
    <label>Resource Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>