force-app/main/default/objects/NEO_Criteria__c/fields/NEO_Rule__c.field-meta.xml
<CustomField>
    <fullName>NEO_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NEO Rule</label>
    <referenceTo>NEO_Rule__c</referenceTo>
    <relationshipLabel>NEO Criterias</relationshipLabel>
    <relationshipName>NEO_Criterias</relationshipName>
    <type>Lookup</type>
</CustomField>