force-app/main/default/objects/NEO_Criteria__c/fields/NEO_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>NEO_Value_Date__c</fullName>
    <label>Value Date</label>
    <type>Date</type>
</CustomField>