force-app/main/default/objects/NEO_Criteria__c/fields/NEO_Value_Datetime__c.field-meta.xml
<CustomField>
    <fullName>NEO_Value_Datetime__c</fullName>
    <label>Value Datetime</label>
    <type>DateTime</type>
</CustomField>