force-app/main/default/objects/NEO_Criteria__c/fields/NEO_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>NEO_Value_Text__c</fullName>
    <label>Value Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>