force-app/main/default/objects/NEO_Criteria__c/fields/NEO_Value_Time__c.field-meta.xml
<CustomField>
    <fullName>NEO_Value_Time__c</fullName>
    <label>Value Time</label>
    <type>Time</type>
</CustomField>