force-app/main/default/objects/NEO_Criteria__c/fields/Row_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Row_Serial_No__c</fullName>
    <label>Row Serial No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>